[package]
name = "cursed-collections"
description = "Collections that (seem to) break Rust safety."
version = "0.8.2"
authors = ["Simon Génier <simon.genier@protonmail.com>"]
homepage = "https://github.com/kolmogorov-fan-account/cursed-collections"
license = "GPL-3.0+"
readme = "README.md"
edition = "2021"
categories = ["data-structures", "no-std"]

[dependencies]
hashbrown = "0.12"

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"
